--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>My blog</title>
+    <title>Billie's Blog</title>
+    <meta charset="UTF-8">
+    <link href="index.css" rel="stylesheet" type="text/css">
+  </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <h1>Welcome to my little part of the internet</h1> 
+    <p>I am a current foundations student at DEV.</p>
+    <p> This is only the beginning.</p>
+    <p> Please check out my blog posts, past, present and future. </p>
   </body>
-</html>
+  </html>
