--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Billie's Blog</title>
     <meta charset="UTF-8">
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Welcome to my little part of the internet</h1> 
