--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <meta charset="UTF-8">
-    <link href="/styles/main.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/styles/main.css">
     <h1>Welcome to my little part of the internet</h1> 
     <p>I am a current foundations student at DEV.</p>
     <p> This is only the beginning.</p>
