--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
   <head>
     <title>Billie's Blog</title>
-<<<<<<< HEAD
-=======
     <meta charset="UTF-8">
-    <link href="/styles/main.css" rel="stylesheet" type="text/css">
->>>>>>> 42ba0c60879f28e492f743ad81f5126b1a3ecda0
+    <link href="./styles/main.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <meta charset="UTF-8">
