--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Billie's Blog</title>
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap" rel="stylesheet">
   </head>
   <body>
     <meta charset="UTF-8">
