--- a/index.html
+++ b/index.html
@@ -19,4 +19,7 @@
     <p> This is only the beginning.</p>
     <p> Please check out my blog posts, past, present and future. </p>
   </body>
+  <div> 
+    
+  </div>
   </html>
