--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles/main.css">
     <h1>Welcome to my little part of the internet</h1> 
+    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree in an American Autmn, burnt red and orange leaves, captured by Theodor Horydczak"
     <p>I am a current foundations student at DEV.</p>
     <p> This is only the beginning.</p>
     <p> Please check out my blog posts, past, present and future. </p>
   </body>
   <div> 
-    
+
   </div>
   </html>
