--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree in an American Autmn, burnt red and orange leaves, captured by Theodor Horydczak"
     <div> 
     </div>
+    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg"
+    <div> 
+    </div>
     <h2>I am a current foundations student at DEV.</h2>
     <p> This is only the beginning.</p>
     <p> Please check out my blog posts, past, present and future. </p>
