--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div> 
     </div>
     <h2>I am a current foundations student at DEV.</h2>
+    <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
     <p> This is only the beginning.</p>
     <p> Please check out my blog posts, past, present and future. </p>
   </body>
