--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
   <body>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles/main.css">
-    <h1>Welcome to my little part of the internet</h1> 
+    <h1>Welcome to a little part of the internet</h1> 
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree in an American Autmn, burnt red and orange leaves, captured by Theodor Horydczak"
     <div> 
     </div>
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg"
     <div> 
     </div>
-    <h2>I am a current foundations student at DEV.</h2>
-    <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
-    <p> This is only the beginning.</p>
+    <h2>This is only the beginning.</h2>
+    <p> </p>
+    <div> 
     <p> Please check out my blog posts, past, present and future. </p>
+    <p> Core Blog </p>
+    <p> Tech Blog</p>
+    <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
   </body>
-  <div> 
-
   </div>
   </html>
