--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Proza+Libre&display=swap" rel="stylesheet">
   </head>
   <body>
+    <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles/main.css">
     <h1>Welcome to a little part of the internet</h1> 
@@ -28,6 +29,7 @@
     <p> Core Blog </p>
     <p> Tech Blog</p>
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
+    <footer id="footer"> Copyright B.S.B Limited</footer>
   </body>
   </div>
   </html>
