--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <p> </p>
     <div> 
     <p> Please check out my blog posts, past, present and future. </p>
-    <p> Core Blog </p>
+    <a href=“#core-header">Core Blog</a>
+    <p id="core-header"> Core Blog </p>
     <p> Tech Blog</p>
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
     <footer id="footer"> Copyright B.S.B Limited</footer>
