--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles/main.css">
-    <h1>Welcome to a little part of the internet</h1> 
+    <h1>Welcome to a little known part of the internet</h1> 
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree in an American Autmn, burnt red and orange leaves, captured by Theodor Horydczak"
     <div> 
     </div>
@@ -28,7 +28,8 @@
     <p> Please check out my blog posts, past, present and future. </p>
     <a href=“#core-header">Core Blog</a>
     <p id="core-header"> Core Blog </p>
-    <p> Tech Blog</p>
+    <a href="#html-css.html"> Tech blog</a>
+    <p id="#html-css.html"> Tech Blog</p>
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
     <footer id="footer"> Copyright B.S.B Limited</footer>
   </body>
