--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div> 
     <p> Please check out my blog posts, past, present and future. </p>
     <a href=“#core-header">Core Blog</a>
-    <p id="core-header"> Core Blog </p>
+    <p id="core-header"> </p>
     <a href="#html-css.html"> Tech blog</a>
     <p id="#html-css.html"> Tech Blog</p>
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
