--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href=“#core-header">Core Blog</a>
     <p id="core-header"> </p>
     <a href="#html-css.html"> Tech blog</a>
-    <p id="#html-css.html">/p>
+    <p id="#html-css.html"></p>
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
     <footer id="footer"> Copyright B.S.B Limited</footer>
   </body>
