--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <p> </p>
     <div> 
     <p> Please check out my blog posts, past, present and future. </p>
-    <a href=“#core-header">Core Blog</a>
-    <p id="core-header"> </p>
+    <a href=“#values-identity.html">Core Blog</a>
+    <p id="values-identity"> </p>
     <a href="#html-css.html"> Tech blog</a>
     <p id="#html-css.html"></p>
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
