--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p> </p>
     <div> 
     <p> Please check out my blog posts, past, present and future. </p>
-    <a href=“#values-identity.html">Core Blog</a>
+    <a href=“#../blog/values-identity.html">Core Blog</a>
     <p id="values-identity"> </p>
     <a href="#html-css.html"> Tech blog</a>
     <p id="#html-css.html"></p>
