--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles/main.css">
+    <div>
     <h1>Welcome to a little known part of the internet</h1> 
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree in an American Autmn, burnt red and orange leaves, captured by Theodor Horydczak"
-    <div> 
     </div>
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg"
     <h2>This is only the beginning.</h2>
@@ -29,7 +29,7 @@
     <a href="#html-css.html"> Tech blog</a>
     <p id="#html-css.html"></p>
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
-    <footer id="footer"> Copyright B.S.B Limited</footer>
+    <footer id="footer"> Copyright B.S Limited</footer>
   </body>
   </div>
   </html>
