--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/styles/main.css">
-    <div>
+    <div>  </div>
     <h1>Welcome to a little known part of the internet</h1> 
-    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree in an American Autmn, burnt red and orange leaves, captured by Theodor Horydczak"
-    </div>
-    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg"
-    <h2>This is only the beginning.</h2>
-    <p> </p>
-    <div> 
-    <p> Please check out my blog posts, past, present and future. </p>
-    <a href=“#../blog/values-identity.html">Core Blog</a>
+    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
+   
+   <div></div> <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
+  
+    <p> Please check out my blog posts, past, present and future. </p> 
+    <a href=“#../blog/values-identity.html>Core Blog</a>
     <p id="values-identity"> </p>
     <a href="#html-css.html"> Tech blog</a>
     <p id="#html-css.html"></p>
