--- a/html-css.html
+++ b/html-css.html
@@ -12,11 +12,15 @@
   
     <div></div>
     <p>
-       
-The Margin is the area of space around an element's Border. Padding is the area of space  inside the element, inside of the Border. The Border is the line around the Padding between the Margin. The Margin is therefore used to make space between the different elements on a webpage. The Margin is crucial in making sure that a page does not look cluttered, that elements are not running on to each other. Padding is also crucial, as it creates the space inside the element, space between or within the inside of the border.  
+       The Margin is the area of space around an element's Border. Padding is the area of space  inside the element, inside of the Border. 
+       The Border is the line around the Padding between the Margin. The Margin is therefore used to make space between the different elements on a webpage. 
+       The Margin is crucial in making sure that a page does not look cluttered, that elements are not running on to each other. 
+       Padding is also crucial, as it creates the space inside the element, space between or within the inside of the border.  
     </p>
     <p>
-      The key differences between them are that they are labels of different space manipulation in terms of the element(s) you are manipulating on the webpage. Margins can also be used to overlap elements on a page. Ultimately they are all working to define and palace the element within the page. Paddins can also be used to alter the size of an element on the page, either increasing the space around the content or decreasing it. 
+      The key differences between them are that they are labels of different space manipulation in terms of the element(s) you are manipulating on the webpage. 
+      Margins can also be used to overlap elements on a page. Ultimately they are all working to define and palace the element within the page. 
+      Padding can also be used to alter the size of an element on the page, either increasing the space around the content or decreasing it. 
     </p>
   </body>
 </html>
