meta name="viewport"

--- a/html-css.html
+++ b/html-css.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="./styles/main.css" rel="stylesheet" type="text/css">
   </head>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
     <h1>Sprint 2: CSS blog post</h1>
     <h2>What is the difference between Margin, Border, and Padding? </h2>
