--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Billie's Blog</title>
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
