--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <div>  </div>
-    <h1>Welcome to a little known part of the internet</h1> 
+    <h1 class="gold-text">Welcome to a little known part of the internet</h1> 
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
    
    <div></div> <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
