--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
    <div></div> <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
   
     <p> Please check out my blog posts, past, present and future. </p> 
-    <a href=“#../blog/values-identity.html>Core Blog</a>
-    <p id="values-identity"> </p>
-    <a href="#html-css.html"> Tech blog</a>
-    <p id="#html-css.html"></p>
+ 
+    <a href="/blog/identity-values.html"> Core blog</a>
+
+    <a href="html-css.html"> Tech blog</a>
+  
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
     <footer id="footer"> Copyright B.S Limited</footer>
   </body>
