--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
     <p> Please check out my blog posts, past, present and future. </p> 
  
-    <a href="/blog/identity-values.html"> Core blog</a>
+    <a href="billie-staples.github.i/blog/identity-values.html"> Core blog</a>
 
     <a href="html-css.html"> Tech blog</a>
   
