<meta name="viewport"

--- a/identity-values.html
+++ b/identity-values.html
@@ -4,7 +4,7 @@
     <title>Values + Identity </title>
     <meta charset="UTF-8">
     <link href="../styles/main.css" type="text/css" rel="stylesheet">
-    <a href=""
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   
   <body>
@@ -34,6 +34,6 @@
         Although as the festival went on for a month after that there were still a few moments of tension that arose, across the season. 
         Next time, I would definitely take the time, at the time, to sit down and talk through what we were both thinking and feeling, so we could have resolved it fully and properly. 
       </p>
-      <div></div>
+      
    </body>
 </html>
