--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <div>  </div>
-    <h1 class="bisque-background div.relative">Welcome to a little known part of the internet</h1> 
-    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
-   
-   <div></div> <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
+    <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
+   <div class="relative"> <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
+   </div>
+   <div class="relative"></div> <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
   
     <p> Please check out my blog posts, past, present and future. </p> 
  
