--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="html-css.html"> Tech blog</a>
   
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
-    <footer class="pink-text id="footer"> Copyright B.S Limited</footer>
+    <footer id="footer"> Copyright B.S Limited</footer>
   </body>
   </div>
   </html>
