--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Proza+Libre&display=swap" rel="stylesheet">
   </head>
   <body>
+    <main>
     <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <div>  </div>
@@ -29,6 +30,6 @@
   
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
     <footer id="footer"> Copyright B.S Limited</footer>
+    </main>
   </body>
-  </div>
   </html>
