--- a/identity-values.html
+++ b/identity-values.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-    <h1> Values and Identity</h1>
+    <h1 class="pink-text"> Values and Identity</h1>
     <div></div>
     <p> An ethical decision I made recently was buying a powerade for a homeless presenting person, who accepted the powerade and offered me a seat next to them. 
       I believe it is an ethical decision to help those lesser than you, even when like me you are a student. 
