--- a/identity-values.html
+++ b/identity-values.html
@@ -19,8 +19,8 @@
      <p>My heritage is Scottish, maternally, my mum's family moved over to Otepoti, Dunedin when she was a child. 
       My dad's family is Danish English, on his fathers side and French jewish, on my granny’s. I only have one remaining grandparent, so maybe separation is a big part of my identity. 
       I am at an age where looking into my family history and heritage, whakapapa is hard/ painful but also exciting and healing. 
-      I come from a family of artists, my father is a musician and my mother is a theatre maker, my paternal grandad is an artist, my maternal grandpa was a regimental dance instructor in the army as well as a variety entertainer. My scottish granny, never had the opportunity to be an artist, she wqorked in a tobacco factory from age 12 and as a cleaner of Otago university, all her time in Aotearoa. 
-      I believe that my artistic, working class heritage is a bit informant of my identity and values. More than ever I want to break generational trauma and be in circles that my ancestors could have only dreamed of. </li> 
+      I come from a family of artists, my father is a musician and my mother is a theatre maker, my paternal grandad is an artist, my paternal grandmother was also a painter. My maternal grandpa was a regimental dance instructor in the army as well as a variety entertainer. My maternal granny, never had the opportunity to be an artist, she wqorked in a tobacco factory from age 12 and as a cleaner of Otago university, all her time in Aotearoa. 
+      I believe that my artistic, working class heritage is a  informant of my identity and values. More than ever I want to break generational trauma and be in circles that my ancestors could have only dreamed of. </li> 
       <div></div>
       <p> Listening is a strength of mine that really helps me to understand what all this new information is. 
         During the sprints I have applied my listening practise. A learning limitation of mine would have been maintaining focus for long sustained time. 
