--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -25,10 +25,35 @@
 </p>
 
 <p>
-  
+  Emotional Intelligence can be passed off as “woo-woo” (which is an arcane and colonial term- get that out of the eda handbook). 
+  But “luckily” that is “only” because we have been raised (brain washed) to see emotions as weak, as victim making and we have been taught to shame victims. 
 
-
-
-
+  Humans are bloody nuanced bananas. 
 </p>
-
+<p> 
+  I am a highly sensitive person and it's funny, even as I type this, it is hard to self describe and share (to a blog no less). 
+  This awareness comes from being a HSP in addition to nature, not to mention nurture that has informed who I am and how I behave as an adult today. 
+  I am also a very emotionally intelligent person. My ability to recognise the uncomfortable feeling and choose to share, is an example of this. 
+  I am also able to say with confidence. As a highly sensitive person, I also find it very valuable to be able to look at my Emotional Quotient/ further into HSP label in a clinical way, through this core work. 
+  It is something as an artist, I was to an extent unable to do (yet) or maybe the process is just substantially different from that of thinking as a developer.  
+  Or is it part of being an artist that is the strength of us not separating these things and having it as such a deep/ intrinsic part of how we work and create, without that we are unable to make the work we can.  
+  Ok… bit of a deep wormhole there. Shoutout you for getting through. Wink face.
+</p>
+<p>
+  Emotional Quotient is relevant to me as it is relevant to any human being on this planet. I really think we need to divulge, in a safe way, our experience of emotion. 
+  In order to share our human truths that exist within that, the possibility for communication, or “advancement” we have albeit in the limited time we have. 
+  The world is burning.  
+</p>
+<p>
+  As a person who was raised in adverse and strange circumstances, learning how to regulate my emotions and the “lingering overwhelm” (which feels like the first time you got wasted drunk, think 15 and spewing in the bushes, the morning after that, shaking and unable to move but  it's all to do with the strength of emotions). 
+  I know that if I had been born in a different time (or on alternative timelines) a 1950’s Billie, could have been in a psych-ward. Maybe,  if I had been raised in London-England, a dead Billie or in rehab Billie, maybe, who knows. 
+  The world that we are living in is stressful for all people. The ability to regulate your own emotions is inexplicably valuable. To recognise emotion is others and to be empathetic to that is crucial to connection, to friendship, to community. 
+  Emotional Quotient is very important, in my opinion more so than intelligence quotient. From personal experience I do believe that education is very important, access and accessibility to education. I know there is a lot of work here to be done. 
+  I am really grateful for my school education and university education, which has undoubtedly affected my emotional intelligence.  
+</p>
+<p> 
+  Therefore I am of the understanding that like anything good comes with pain, emotions can not range without intelligence. 
+  To be able to identify, remove and analyse without ego/ prejudice is a skill that a “minority” of the world have. That's why the power is what it is right now. 
+  I more than hope this will change and I might as well believe it. I might as well lend my sensitivity toward the development of my emotional intelligence and not let that gaslight me of my intelligence. 
+  I see emotional quotient being so fiercely in tune with tech and that's why I have been so drawn to this industry. 
+</p>
