Href update all

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
   
     <p> Please check out my blog posts, past, present and future. </p> 
  
-    <a href="identity-values.html"> Core blog</a>
+    <a href="identity-values.html"> Identity + Values Blog</a>
 
-    <a href="html-css.html"> Tech blog</a>
-  
+    <a href="html-css.html"> HTML + CSS Blog</a>
+
+    <a href="emotional-intelligence.html"> Emotional Intelligence Blog</a>
+    
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
     <footer id="footer"> Copyright B.S Limited</footer>
     </main>
