--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     <a href="html-css.html"> HTML + CSS Blog</a>
 
     <a href="emotional-intelligence.html"> Emotional Intelligence Blog</a>
-    
+
+    <a href="javascript-dom.html"> Javascript + DOM Blog </a>
+
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
+   
     <footer id="footer"> Copyright B.S Limited</footer>
     </main>
   </body>
