--- a/neuroplasticity-growthMindset.html
+++ b/neuroplasticity-growthMindset.html
@@ -42,7 +42,14 @@
  </p>
  <div></div>
  <p>
+  I like to think of Neuroplasticity as the science of hope, where we, as the collective individual, do have the ability and are empowered not only to change the way our brains think but also activate growth.  
+  As an avid user of the right side of my brain, I have found neuroplasticity crucial in believing I could get back to the math brain I had way back in school. 
+  It has been challenging to go from lyrically astute myself in writing to having to formulate with syntax and logic. 
+  Growth mindset has like neuroplasticity been a key influence on my learning and a very positive one.
+</p>
+<div></div>
+<p>
 
 
   
- </p>
+</p>
