--- a/neuroplasticity-growthMindset.html
+++ b/neuroplasticity-growthMindset.html
@@ -49,7 +49,14 @@
 </p>
 <div></div>
 <p>
+  A growth mindset is an incredible thing to have! 
+  Carol Dweck is a legendary and pioneering thinker that has really gifted the world. Adopting a growth mindset which is doing an activity every day or a repeat small task that develops into a great result. 
+  I have definitely experienced a physical and mental growth mindset when I was practicing yoga every day over the “big” lock down. 
+  I think many people relate to the yoga journey of ending up with/ finding multiple/ senses of strength, clarity or calm,we/ you may not have thought would ever be possible. 
+  When we reflect on these experiences we can see that without doing the, for example yoga, practice daily, it would have been impossible. 
+  Growth mindset is so crucial for young people to understand because ultimately you can do anything you put your mind to and practice. 
+  I think the practice part of the growth mindset is dominant to its actualisation. I would say I definitely had a substantially more fixed mind set before this. 
+  I know that I now actively have a much more growth mindset, especially when it comes to being a developer.  
 
 
-  
 </p>
