--- a/problemSolving.html
+++ b/problemSolving.html
@@ -6,4 +6,29 @@
     </title>
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
-    
+    <p>
+      Whilst first reading over the FizzBuzz kata, I felt very overwhelmed. 
+      The divisibility by 3, 5 and 15 was enough for my brain to go argh.  
+      Pseudocode was key to being able to start to solve this. 
+      By writing out, commenting out, the steps necessary, at first go through, it was key in formatting what the answer might look like in my brain. 
+      Pseudocode is, in my mind, sketching the parameters of the problem. 
+      I actually realized that the problem, although challenging, was not completely out of my ability. 
+      Using pseudocode and googling, I was able to solve this problem. 
+      I also found, for all the challenges, watching the live workshop sessions very helpful. 
+  </p>
+<div> </div>
+  <p>
+      During the Grade Book Kata I was very stuck towards the end of solving the problem. 
+      Although there was a simple error message displayed on the console. I did find it hard to decipher what it said. 
+      The message in question referred to lines 83 : 89, there was no code on 89, this tripped me up. 
+      I did sit on this for a while, testing and trialing things, I thought probably won't work but good to give it a go. 
+      My second point of call was old mate google. Although it was good to research and learn, this did not actually help to advance me in solving the problem at hand. 
+      After spending what felt like an eternity on this, I reached out for help. 
+      Tt was clear to me after I had been nudged with human words about where to go/ where I was going wrong and to acknowledge as well as read the error message correctly. 
+      I was then able to solve the problem and move forward. 
+</p>
+    <div></div
+      <p>
+
+
+      </p>>
