--- a/problemSolving.html
+++ b/problemSolving.html
@@ -29,6 +29,10 @@
 </p>
     <div></div
       <p>
-
-
+        The rubber ducky method is a huge skill for developers and any one in a syntax(y) field. Kids are learning to code right? 
+        So we should be able to explain our problem, like we would a class of school children. 
+        I really like this method, it  is a really positive, outside of head way to work on something so clinical.  
+        Pseudocode for me has been a real necessity just even when solving any problems, using the key words as steps and when the function is hinted at which one to use. 
+        I have found having all the problems and working out on one interface helpful to problem solving. 
       </p>>
+      <div></div>
