--- a/problemSolving.html
+++ b/problemSolving.html
@@ -24,7 +24,7 @@
       I did sit on this for a while, testing and trialing things, I thought probably won't work but good to give it a go. 
       My second point of call was old mate google. Although it was good to research and learn, this did not actually help to advance me in solving the problem at hand. 
       After spending what felt like an eternity on this, I reached out for help. 
-      Tt was clear to me after I had been nudged with human words about where to go/ where I was going wrong and to acknowledge as well as read the error message correctly. 
+      It was clear to me after I had been nudged with human words about where to go/ where I was going wrong and to acknowledge as well as read the error message correctly. 
       I was then able to solve the problem and move forward. 
 </p>
     <div></div
@@ -34,5 +34,14 @@
         I really like this method, it  is a really positive, outside of head way to work on something so clinical.  
         Pseudocode for me has been a real necessity just even when solving any problems, using the key words as steps and when the function is hinted at which one to use. 
         I have found having all the problems and working out on one interface helpful to problem solving. 
+        I feel more confident in console.loging to check in that the codes functionailty is working. 
+        I deifntly think that I have gained more confidence in asking for help, I feel that being behind the majority of the group has stopped me from sharing and asking for help from peer students as much as I would have liked. 
+        My expectation is that during the bootcamp I will be able to gain more from the pair programming and taking part in group projects. I have gotten a lot more familiar with how to read error messages as well as the MDN docs/ general docs on Javascript on the internet. 
+        Althought I am definetly NOT an expert I do feel more able to know what they mean and able to test them out (even if I am wrong the first 10 times). 
+        All in all, it is no suprise that developers must use a variety of problem solving methods and become proficient in these, as well as sitting in the unknown. 
+        Testing and trialing has been natural from the beginning of this process, elimination to truth is a very basic human instinct. 
+        I guess I would like to say I feel more confident in the testing realm but I think that defeats the purpose of really being able to test. 
+        I think reflecting is key to being able to move forward during this course material. Without the reflection it would just be a whirlwind with lttle anchoring. Having the time to truly reflect on new ideas is a treasure. 
+        With the tiny bit of perspective here, I think the problem solving methods would have been even more valuable introduced and enforced much earlier on in my developer process. 
       </p>>
-      <div></div>
+    <div></div>
