--- a/problemSolving.html
+++ b/problemSolving.html
@@ -37,7 +37,7 @@
         I feel more confident in console.loging to check in that the codes functionailty is working. 
         I definetly think that I have gained more confidence in asking for help, I feel that being behind the majority of the group has stopped me from sharing and asking for help from peer students as much as I would have liked. 
         My expectation is that during the bootcamp I will be able to gain more from the pair programming and taking part in group projects. I have gotten a lot more familiar with how to read error messages as well as the MDN docs/ general docs on Javascript on the internet. 
-        Although I am definetly NOT an expert I do feel more able to know what they mean and able to test them out (even if I am wrong the first 10 times). 
+        Although I am definetly NOT an expert I do feel more able to know what they mean and able to test them out (even if I still get it wrong the first 10 times). 
         All in all, it is no suprise that developers must use a variety of problem solving methods and become proficient in these, as well as sitting in the unknown. 
         Testing and trialing has been natural from the beginning of this process, elimination to truth is a very basic human instinct. 
         I guess I would like to say I feel more confident in the testing realm but I think that defeats the purpose of really being able to test. 
