--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Proza+Libre&display=swap" rel="stylesheet">
-  </head>
+
+
+</head>
   <body>
     <main>
     <a href="#footer"> Bottom of page</a>
     <meta charset="UTF-8">
     <div>  </div>
     <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
+    
     <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
    
    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
@@ -31,6 +35,14 @@
     <a href="emotional-intelligence.html"> Emotional Intelligence Blog</a>
 
     <a href="javascript-dom.html"> Javascript + DOM Blog </a>
+
+    <a href="learning-plan.html"> Learning plan Blog</a>
+
+    <a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset Blog</a>
+
+    <a href="problemSolving.html"> Problem Solving Blog</a>
+
+    <a href=""> Reflection Blog </a>
 
     <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
    
