--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
     <div>  </div>
     <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
     
-    <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
+  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
    
-   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
+  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
   
     <p> Please check out my blog posts, past, present and future. </p> 
  
-    <a href="identity-values.html"> Identity + Values Blog</a>
+    <a class="pink-text" href="identity-values.html"> Identity + Values Blog</a>
 
-    <a href="html-css.html"> HTML + CSS Blog</a>
+    <a class="brown-text" href="html-css.html"> HTML + CSS Blog</a>
 
-    <a href="emotional-intelligence.html"> Emotional Intelligence Blog</a>
+    <a class="pink-text" href="emotional-intelligence.html"> Emotional Intelligence Blog</a>
 
-    <a href="javascript-dom.html"> Javascript + DOM Blog </a>
+    <a class="brown-text" href="javascript-dom.html"> Javascript + DOM Blog </a>
 
-    <a href="learning-plan.html"> Learning plan Blog</a>
+    <a class="pink-text" href="learning-plan.html"> Learning plan Blog</a>
 
-    <a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset Blog</a>
+    <a class="brown-text" href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset Blog</a>
 
-    <a href="problemSolving.html"> Problem Solving Blog</a>
+    <a class="brown-text"href="problemSolving.html"> Problem Solving Blog</a>
 
-    <a href=""> Reflection Blog </a>
+    <a class="brown-text" href=""> Reflection Blog </a>
 
-    <a href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
+    <a class="brown-text"  href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
    
     <footer id="footer"> Copyright B.S Limited</footer>
     </main>
