--- a/index.html
+++ b/index.html
@@ -15,39 +15,37 @@
 
 
 </head>
-  <body>
-    <main>
+<body>
+<main>
     <a href="#footer"> Bottom of page</a>
-    <meta charset="UTF-8">
-<div>  
     <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
-</div>
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
-   
-  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">
-<div>  
-    <p> Please check out my blog posts, past, present and future. </p> 
-</div>
-<div>  
-    <a class="pink-text" href="identity-values.html"> Identity + Values Blog</a>
-</div>
+  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
+
+  <p> Please check out my blog posts, past, present and future. </p> 
+
+<div>  </div>  
+<ol>
+  <li> <a class="pink-text" href="identity-values.html"> Identity + Values Blog</a>
+
     <a class="brown-text" href="html-css.html"> HTML + CSS Blog</a>
-<div>
+
     <a class="pink-text" href="emotional-intelligence.html"> Emotional Intelligence Blog</a>
-</div>
+
     <a class="brown-text" href="javascript-dom.html"> Javascript + DOM Blog </a>
-<div>
+
     <a class="pink-text" href="learning-plan.html"> Learning plan Blog</a>
-</div>
+
     <a class="brown-text" href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset Blog</a>
-<div>
+
     <a class="pink-text"href="problemSolving.html"> Problem Solving Blog</a>
-</div>
+
     <a class="brown-text" href=""> Reflection Blog </a>
-<div>
+
     <a class="pink-text"  href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
-</div>  
+</ol>
     <footer id="footer"> Copyright B.S Limited</footer>
-</main>
+
+ </main>
 </body>
 </html>
